app devep  by rudhi

--- a/src/app/pages/services/app-development/app-development.component.html
+++ b/src/app/pages/services/app-development/app-development.component.html
@@ -85,9 +85,141 @@
             </p>
         </div>
     </div>
+    
+    <div class="w-full flex justify-center items-center mt-5">
+        <p class="w-[80%]">
+            Apps for all versions of iOS, watchOS, Android, and Wear OS Native & cross-platform apps (React Native, Xamarin, Flutter) Enterprise apps (for internal use) and monetized products Mobile app-only and mobile app + web app solutions (incl. PWAs*) *PWAs (Progressive Web Apps) are responsive apps that can be accessed on mobile via a shortcut. PWAs help increase engagement by 90%+, cut load time by 2.5x, and make desktop & mobile conversions even. Learn more about PWAs.
+        </p>
+    </div>
     <div class="w-full flex flex-col justify-center text-center items-center">
         <button type="button" class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px] text-[#000] mt-5">
             Get in touch
         </button>
+    </div>
+</section>
+
+<section class="w-full flex flex-col mt-[100px] mb-[100px] gap-y-10">
+    <div class="w-full flex flex-col justify-center text-center items-center">
+        <h2 class="text-center text-[50px] font-bold ">
+            Building All Mobile Features Modern Users Need
+        </h2>
+        <p class="w-[80%]">
+            Whether creating an enterprise or consumer mobile app, we rely on our expertise in different techs and tools to make an app truly helpful and worth taking your users’ screen space. Though we can repeat the features, no two apps are identical: we find a unique value proposition for each app and tailor the functionality uniquely to its audience’s needs.
+        </p>
+    </div>
+    <div class="w-full flex justify-center items-center">
+        <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/app-develop-2.png" alt="" srcset="">
+    </div>
+</section>
+<section class="flex flex-col mt-[100px] mb-5">
+    <div class="flex flex-col gap-5 justify-center items-center text-center">
+        <h2 class=" w-[80%] text-[30px] font-bold text-[#33B5CC]">
+            Customized Software Solutions.
+        </h2>
+        <p class=" w-[80%]">
+            Augment your existing development team to complete a big project or build a new software solution or
+            application from scratch with the best custom software development company, Clumps Software Solutions.
+        </p>
+    </div>
+    <div class="w-full flex flex-col md:flex-row justify-center items-center mt-[50px]">
+        <div class="w-full md:w-[40%] flex flex-col">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/app-develop-3.png" />
+        </div>
+        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-2 p-5">
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/160138-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        ANDROID App Development
+                    </h2>
+                    <p>
+                        Reach more customers on popular Android mobile devices using Clumps’s end-to-end android mobile app development, integration, implementation, and support services.
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/1240942-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        Ios App Development
+                    </h2>
+
+                    <p>
+                        Reach more customers on popular Android mobile devices using Clumps’s end-to-end android mobile app development, integration, implementation, and support services.
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/1077039-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        Windows App Development
+                    </h2>
+                    <p>
+                        Reach more customers on popular Android mobile devices using Clumps’s end-to-end android mobile app development, integration, implementation, and support services.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
+    
+    <div class="w-full flex justify-center items-center ">
+        <button type="button"
+            class="px-5 py-2 border-4 border-[#33B5CC] rounded hover:bg-[#33B5CC] hover:text-white">Schedule A
+            Meeting
+        </button>
+    </div>
+</section>
+
+<section class="w-full flex flex-row justify-center items-center mb-[100px] mt-[50px]">
+    <div class="w-[80%] flex flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
+        <div class="w-[30%] flex flex-col justify-around items-start gap-5">
+            <img  src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="" srcset="">
+            <div class=" flex flex-row justify-center items-center gap-5">
+                <span>
+                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-phone.png" alt="" srcset="">
+                </span>
+                <span>Phone: +91 9665891425</span>
+            </div>
+            <div class=" flex flex-row justify-center items-center gap-5">
+                <span>
+                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt="" srcset="">
+                </span>
+                <span>Email: info@clumpssoftware.com</span>
+            </div>
+        </div>
+        <div class=" w-[48%] flex flex-col gap-5">
+            <div>
+                <h2 class="text-[30px] font-bold text-[#33B5CC] ">Get In Touch</h2>
+            </div>
+            <form>
+                <div class="mb-4">
+                    <label class="block font-semibold mb-1" for="name">Name:</label>
+                    <input type="text" id="name" name="name" class="w-full p-2 border rounded-md" required>
+                </div>
+                <div class="mb-4">
+                    <label class="block font-semibold mb-1" for="email">Email:</label>
+                    <input type="email" id="email" name="email" class="w-full p-2 border rounded-md" required>
+                </div>
+            
+                <div class="mb-4">
+                    <label class="block font-semibold mb-1" for="message">Message:</label>
+                    <textarea id="message" name="message" class="w-full p-2 border rounded-md resize-none" required></textarea>
+                </div>
+                <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded-md">Submit</button>
+            </form>
+        </div>
+
     </div>
 </section>
